@@ -1,6 +1,6 @@
 {
     "name": "bzgold",
-    "version": "0.0.8",
+    "version": "0.0.9",
     "factorio_version": "1.1",
     "title": "Noble Metals",
     "author": "Brevven",
