@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.9
 Date: 2023-03-27
+  Fixes:
+    - Some fixes around platinum, palladium settings
   Changes:
     - Tweak silver wire icon
 ---------------------------------------------------------------------------------------------------
